--- a/Lab Assignment 3.ipynb
+++ b/Lab Assignment 3.ipynb
@@ -7910,11 +7910,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TimeStamp', 'Time Zone\",\"Name\",\"PTID\",\"Load\"', 'Temp', 'DewPoint']\n"
+     ]
+    }
+   ],
    "source": [
     "#Task 6\n",
     "import pandas as pd\n",
@@ -7930,6 +7936,42 @@
     "\n",
     "print(m)\n",
     "f2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicates removed and saved in noDuplicates.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Task 7\n",
+    "import csv\n",
+    "inputFile = open('duplicate.csv','r')\n",
+    "\n",
+    "outputFile = open('noDuplicate.csv','w')\n",
+    "\n",
+    "listLines = []\n",
+    "\n",
+    "for line in inputFile:\n",
+    "\n",
+    "    if line in listLines:\n",
+    "        continue\n",
+    "\n",
+    "    else:\n",
+    "        outputFile.write(line)\n",
+    "        listLines.append(line)\n",
+    "\n",
+    "outputFile.close()\n",
+    "inputFile.close()\n",
+    "print(\"Duplicates removed and saved in noDuplicates.csv\")"
    ]
   }
  ],
