--- a/Lab Assignment 3.ipynb
+++ b/Lab Assignment 3.ipynb
@@ -7973,6 +7973,33 @@
     "inputFile.close()\n",
     "print(\"Duplicates removed and saved in noDuplicates.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Whitespaces removed\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Task 8\n",
+    "import csv\n",
+    "input = open('messy.csv', 'r')\n",
+    "output = open('notMessy.csv', 'w')\n",
+    "writer = csv.writer(output)\n",
+    "for row in csv.reader(input,delimiter = ','):\n",
+    "    if any(field.strip() for field in row):\n",
+    "        writer.writerow(row)\n",
+    "input.close()\n",
+    "output.close() \n",
+    "print(\"Whitespaces removed\")"
+   ]
   }
  ],
  "metadata": {},
